# legalize-pipeline

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ADDING_A_COUNTRY.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  REPROCESSING.md  RESEARCH-ES-v2.md  STATUS.md  config-opolex.yaml  config.yaml  pyproject.toml
.github/workflows/: backfill.yml  bootstrap.yml  ci.yml  daily-update.yml  legalize-daily.yml  monthly-update-ar.yml
scripts/: build_uy_catalog.py  setup-opolex.sh
scripts/es_fidelity/: __init__.py  common.py  report.py  sample.py  score.py
src/legalize/: cli.py  config.py  countries.py  models.py  pipeline.py  storage.py
src/legalize/committer/: author.py  git_ops.py  message.py
src/legalize/fetcher/: _tables.py  _text.py  base.py
tests/: conftest.py  test_daily_fr.py  test_error_handling.py  test_integration_multicountry.py  test_metadata.py  test_parser_de.py  test_parser_es_refactor.py  test_parser_eu.py  test_parser_eu_formats.py  test_parser_fi.py  test_parser_ie.py  test_parser_it.py  test_parser_legi.py  test_parser_lt.py  test_parser_lu.py  test_parser_nl.py  test_parser_no.py  test_parser_ro.py  test_parser_sk.py  test_parser_ua.py  test_parser_uy.py  test_pipeline_bootstrap.py  test_pipeline_generic.py  test_refactor.py  test_slug.py  test_sumario.py  test_xml_parser.py
tests/fixtures/: impo-constitucion-sample.json  impo-decreto-ley-sample.json  impo-ley-sample.json  tar-metadata-TAR-1992-00001.json  tar-metadata-TAR-2000-12345.json  tar-metadata-TAR-2020-99999.json  tar-suvestine-sample.json  tar-text-sample.json
(+183 files in other folders)
