[project]
name = "legalize"
version = "0.1.0"
description = "Multi-country pipeline that converts official legislation into version-controlled Markdown in Git"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "lxml>=5.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "pdfplumber>=0.11",  # Estonia: PDF annex → Markdown table conversion
    "pypdfium2>=4.30",  # Greece: column-aware PDF text extraction (BSD-3-Clause)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-snapshot",
    "responses>=0.25",
    "ruff>=0.5",
]

[project.scripts]
legalize = "legalize.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legalize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "cssselect>=1.4.0",
]
